--- a/index.html
+++ b/index.html
@@ -37,6 +37,32 @@
             <img src="./images/image-mockups.png" alt="">
         </div>
     </main>
+
+    <section id="features">
+        <div id="title">
+            <h2>Why choose Easybank?</h2>
+            <p>We leverage Open Banking to turn your bank account into your financial hub. <br> Control your finances like never before.</p>
+        </div>
+
+        <div id="info">
+            <div>
+                <h4>Online Banking</h4>
+                <p>Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.</p>
+            </div>
+            <div>
+                <h4>Simple Budgeting</h4>
+                <p>See exactly where your money goes each month. Receive notifications when you are close to hitting your limits.</p>
+            </div>
+            <div>
+                <h4>Fast Onboarding</h4>
+                <p>We do not do branches. Open your account in minutes online and start taking control of your finances right away.</p>
+            </div>
+            <div>
+                <h4>Open API</h4>
+                <p>Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier.</p>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
