--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div id="img">
-            <img src="./images/image-mockups.png" alt="">
+            <img src="./images/image-mockups.png" alt="mobile phones">
         </div>
     </main>
 
@@ -46,18 +46,22 @@
 
         <div id="info">
             <div>
+                <img src="./images/icon-online.svg" alt="bank card image" class="icon">
                 <h4>Online Banking</h4>
                 <p>Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.</p>
             </div>
             <div>
+                <img src="./images/icon-budgeting.svg" alt="mobile phone image" class="icon">
                 <h4>Simple Budgeting</h4>
                 <p>See exactly where your money goes each month. Receive notifications when you are close to hitting your limits.</p>
             </div>
             <div>
+                <img src="./images/icon-onboarding.svg" alt="" class="icon">
                 <h4>Fast Onboarding</h4>
                 <p>We do not do branches. Open your account in minutes online and start taking control of your finances right away.</p>
             </div>
             <div>
+                <img src="./images/icon-api.svg" alt="" class="icon">
                 <h4>Open API</h4>
                 <p>Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier.</p>
             </div>
