--- a/index.html
+++ b/index.html
@@ -67,6 +67,38 @@
             </div>
         </div>
     </section>
+
+    <aside>
+        <h2 id="article-box">Latest Articles</h2>
+
+        <div id="articles">
+            <div>
+                <img src="./images/jason-leung-SAYzxuS1O3M-unsplash.jpg" alt="cash" class="picture">
+                <h4>Receive money in any currency with no fees</h4>
+                <p>The world is getting smaller and we are becoming more mobile. So why should you be forced to only receive money in a single currency?</p>
+            </div>
+            <div>
+                <img src="./images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant table" class="picture">
+                <h4>Treat yourself without worrying about money</h4>
+                <p>Our simple budgeting feature allows your to separate out your spending  and set realistic limits each month. </p>
+            </div>
+            <div>
+                <img src="./images/ross-parmly-rf6ywHVkrlY-unsplash.jpg" alt="sky" class="picture">
+                <h4>Take your Easybank card wherever you go</h4>
+                <p>We want you to enjoy your travels. This is wy we do not charge any fees on purchases while you are abroad.</p>
+            </div>
+            <div>
+                <img src="./images/pablo-heimplatz-ZODcBkEohk8-unsplash.jpg" alt="confetti" class="picture">
+                <h4>Our invite only Beta accounts are now live!</h4>
+                <p>After a lot of hard work by the whole team, we are excited to launch our closed beta. It is easy to request an invite  through the site.</p>
+            </div>
+
+        </div>
+    </aside>
+
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
