--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>    
 
     <nav id="nav-bar">
-        <div id="logo"><a href="#">easybank</a></div>
+        <div id="logo">easybank</div>
         <div>
             <ul id="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Careers</a></li>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact</li>
+                <li>Blog</li>
+                <li>Careers</li>
             </ul>
         </div>
         <div id="nav-btn">
@@ -97,7 +97,32 @@
     </aside>
 
     <footer>
-        
+        <div id="first-block">
+                <div id="logo-footer">easybank</div>
+            <div id="social-media">
+                <img src="./images/icon-facebook.svg" alt="Facebook">
+                <img src="./images/icon-instagram.svg" alt="Instagram">
+                <img src="./images/icon-pinterest.svg" alt="Pinterest">
+                <img src="./images/icon-twitter.svg" alt="Twitter">
+                <img src="./images/icon-youtube.svg" alt="YouTube">
+            </div>
+        </div>
+
+        <div id="second-block">
+            <p>About Us</p>
+            <p>Contact</p>
+            <p>Blog</p>
+        </div>
+
+        <div id="third-block">
+            <p>Careers</p>
+            <p>Support</p>
+            <p>Privacy Policy</p>
+        </div>
+
+        <div id="fourth-block">
+            <button>Request Invite</button>
+        </div>
     </footer>
     
 </body>
